--- a/k8s/istio-gateway-values.yaml
+++ b/k8s/istio-gateway-values.yaml
@@ -1,25 +1,10 @@
-# global:
-#   hub: "gcr.io/istio"
-#   tag: "1.20.1"
-
-# replicaCount: 1
-
-# nodeSelector:
-#   cloud.google.com/gke-nodepool: "application-pool"
-
-# tolerations:
-#   - key: "node.kubernetes.io/not-ready"
-#     operator: "Exists"
-#     effect: "NoSchedule"
-#   - key: "node.kubernetes.io/unreachable"
-#     operator: "Exists"
-#     effect: "NoSchedule"
+global:
+nodeSelector:
+  cloud.google.com/gke-nodepool: "application-pool"
 
 service:
   type: LoadBalancer
   loadBalancerIP: 34.77.72.173
-  annotations:
-    networking.gke.io/managed-certificates: "weg-case-study-cert"
   ports:
     - name: http
       port: 80
